--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
   .all_skills {
     display: flex;
     flex-direction: row;
-    flex-flow: wrap;
+    flex-wrap: wrap;
   }
   
   .skill {
@@ -127,33 +127,23 @@ body {
     display: block;
     border-radius: 6px;
     text-align: center;
-    margin: 50px;
-    padding: 10px;
-    width: 2in;
-    font-size: 20px;
-    box-shadow: 0 3px 10px gray;
+    margin: 30px;
+    padding: 15px;
+    width: 150px; /* 调整宽度使卡片更紧凑 */
+    font-size: 16px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
   }
   
   .skill img {
     height: 70px;
-    align-items: center;
+    margin-bottom: 10px;
   }
   
-  .skills h6 {
-    align-items: center;
-    font-size: 20px;
-    margin-block-start: 8px;
-    margin-block-end: 5px;
+  .skill h6 {
+    font-size: 18px;
     font-weight: bold;
-  } 
+  }
   
-  .skills p {
-    align-items: center;
-    font-size: 15px;
-    color: gray;
-    margin-block-start: 5px;
-    margin-block-end: 5px;
-  } 
   
   .flex_center {
     display: flex;
